package com.auction.service;
import java.time.LocalDateTime;
import java.util.Map;
import java.util.concurrent.ConcurrentHashMap;

import com.auction.model.auction.Auction;
import com.auction.model.auction.AuctionStatus;
import com.auction.model.item.Item;
import com.auction.model.user.Seller;
//quản lý các phiên đấu giá, xử lý các logic không thay đổi trạng thái của phiên đấu giá
public class AuctionManager {
    private static volatile AuctionManager INSTANCE;
    private Map<String, Auction> auctions = new ConcurrentHashMap<>(); //lưu trữ các phiên đấu giá
    private AuctionManager() {}
    public static AuctionManager getINSTANCE() {
        if (INSTANCE == null) {
            synchronized (AuctionManager.class) {
                if (INSTANCE == null) {
                    INSTANCE = new AuctionManager();
                }
            }
        }
        return INSTANCE;
    }
    //thêm phiên đấu giá vào
    public void addAuction(Auction auction) {
        if (auction == null) {
            throw new IllegalArgumentException("Auction cannot be null");
        }
        auctions.put(auction.getId(), auction);
    
    }
    public Auction getAuction(String auctionId) {
        return auctions.get(auctionId);
    }
        //logic dịch vụ phiên đấu giá, chỉ trả về thông tin
    //trả về id người thắng
    public String getWinnerId(String auctionId) {
        Auction auction = getAuction(auctionId);
        if (auction == null) return null;

        // auction.getStatus() sẽ tự động cập nhật trạng thái nội bộ
        // Chỉ có người thắng khi trạng thái là FINISHED hoặc PAID
        if (auction.getStatus() == AuctionStatus.FINISHED || auction.getStatus() == AuctionStatus.PAID) {
            return auction.getHighestBidderId();
        }
        return null; 
    }
    //logic dịch vụ phiên đấu giá, chỉ trả về thông tin
    //trả về tiền thắng
    public double getWinningBid(String auctionId) {
        Auction auction = getAuction(auctionId);
        if (auction == null) return 0.0;
        // auction.getStatus() sẽ tự động cập nhật trạng thái nội bộ
        if (auction.getStatus() == AuctionStatus.FINISHED || auction.getStatus() == AuctionStatus.PAID) {
            return auction.getHighestBid();
        }
        return 0.0;}
    //tạo phiên đấu giá
    public Auction createAuction(Item item, Seller seller, double startPrice, LocalDateTime startTime, LocalDateTime endTime) {
        Auction auction = new Auction(item, seller, startPrice, startTime, endTime);
        // Auction sẽ tự quản lý trạng thái của nó thông qua phương thức getStatus()
        this.addAuction(auction);
        return auction;
    }
    /**
     *  đặt giá cho phiên đấu giá
     * @param auctionId id phiên đấu giá ()
     * @param bidderId  id người đặt giá
     * @param amount    giá trị được đặt
     * @return true nếu đặt giá thành công, false nếu đặt giá thất bại
     */
    public synchronized boolean placeBid(String auctionId, String bidderId, double amount) {
        Auction auction = getAuction(auctionId);
        if (auction == null) {
            throw new IllegalArgumentException("Auction with ID " + auctionId + " not found.");
        }
        // Ủy quyền xử lý đặt giá cho Auction
        // Auction sẽ tự kiểm tra trạng thái và tính hợp lệ của giá
        return auction.processNewBid(bidderId, amount);
    }

    public synchronized boolean cancelAuction(String auctionId, String sellerId) {
        Auction auction = getAuction(auctionId);
        if (auction == null) {
            return false; // Không tìm thấy phiên đấu giá
        }
        // Auction sẽ tự kiểm tra quyền và trạng thái
        return auction.cancelAuction(sellerId);
    }

}
